--- a/proyectoPepsico/assets/css/repuestos-layout-shared.css
+++ b/proyectoPepsico/assets/css/repuestos-layout-shared.css
@@ -29,9 +29,10 @@
     width: 320px;
     flex-shrink: 0;
     position: sticky;
-    top: 100px;
-    max-height: calc(100vh - 120px);
+    top: 75px;
+    max-height: calc(100vh - 95px);
     overflow-y: auto;
+    align-self: flex-start;
 }
 
 /* Cards - Base */
