--- a/proyectoPepsico/pages/vehiculos_agendados/css/vehiculos_agendados.css
+++ b/proyectoPepsico/pages/vehiculos_agendados/css/vehiculos_agendados.css
@@ -400,3 +400,15 @@
     }
 }
 
+/* Ocultar tabla de vehículos agendados para rol Mecánico */
+#tabla-vehiculos-agendados.es-mecanico,
+.es-mecanico #tabla-vehiculos-agendados,
+body.es-mecanico #tabla-vehiculos-agendados {
+    display: none !important;
+    visibility: hidden !important;
+    height: 0 !important;
+    overflow: hidden !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
